#729 - fix horizontal scroll by overriding min width

--- a/src/frontend/pages/HomePage/upcoming-deadlines/upcoming-deadlines.module.css
+++ b/src/frontend/pages/HomePage/upcoming-deadlines/upcoming-deadlines.module.css
@@ -4,6 +4,6 @@
  */
 
  .upcomingDeadlineCard {
-  width: fit-content;
+  min-width: fit-content !important;
   margin: 0px 5px;
  }
